[package]
name = "pg-gardenbot"
version = "0.1.0"
authors = ["Darek Stojaczyk <darek@stojaczyk.pl>"]
edition = "2021"

[dependencies]
glium = "0.25.1"
native-windows-gui = { version = "1.0.13", features = ["rich-textbox"] }
native-windows-derive = "1.0.5"
bytemuck = { version = "1.14.0", features = ["derive"] }
levenshtein = "1.0.5"
winapi = { version = "0.3.9", features = ["winuser", "wingdi", "windef", "wincon", "dwmapi", "shellscalingapi"] }
num_enum = "0.7.3"

[build-dependencies]
winresource = "0.1.17"
